<resources>
    <string name="app_name">DOANAPP</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_or_phone">Email Address or Phone Number</string>
    <string name="back_login_or_signup">Back to Log In/Sign Up</string>
    <string name="back">Back</string>
    <string name="OTP">OTP</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="text_size_color">
    <font color="#013824"><b>Size:</b> 39 </font><b>Color:</b><font color="Red"> Red</font>
    </string>
    <string name="product_detail"><font color="#031824"><b>Size:</b></font> 39. \n<font color="#031824"><b>Color:</b></font> <font color="red">Red.</font>\n<font color="#031824"><b>Price:</b></font> <font color="blue">$1000 </font>
    </string>
    <string name="payment_detail">
    <font color="#031824"><b>Quanitity:</b></font>\n    <font color="#031824"><b>Price:</b></font>\n    <font color="#031824"><b>Discount:</b></font>\n    <font color="#031824"><b>Shipping fee:</b></font>\n    <font color="#031824"><b>Total:</b></font>
    </string>
    <string name="payment_detail1">
    <font><b>5</b></font>\n    <font><b>370000</b></font>\n    <font><b>0</b></font>\n    <font><b>0</b></font>\n    <font><b>370000</b></font>
    </string>

    <string name="action_home">Home</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_cart">Cart</string>
    <string name="action_account">Account</string>
    <string name="contract_name">Name</string>
    <string name="contract_phone">Phone number</string>
    <string name="contract_address">Ward/District/City</string>
    <string name="contract_street">Street name</string>
    <string name="ordersuccess.thank">Thank you for shopping \n with The Godzilla</string>
    <string name="ordersuccess.assoon">Your order will be processed as soon as  \n possible</string>
    <string name="momo.guide">Log in with your phone number to proceed with the link.</string>
    <string name="momo.tendigits">Consists of ten digits</string>
    <string name="zalo.guide">Enter phone number</string>
    <string name="zalo.sure">Please use your phone number to log in.</string>
    <string name="zalo.enterphone">Enter phone number</string>
    <string name="card.holder">Card Holder Name</string>
    <string name="card.name">Nguyen Van A</string>
    <string name="card.num">Card Number</string>
    <string name="card.number">0000 0000 0000 000 0000</string>
    <string name="card.expired">Expired Date</string>
    <string name="card.date">yyyy/mm</string>
    <string name="paymethod.momo">Momo wallet</string>
    <string name="paymethod.momosel">Select</string>
    <string name="paymethod.zalo">Zalo pay</string>
    <string name="paymethod.zalosel">Select</string>
    <string name="paymethod.cart">Credit/Debit card</string>
    <string name="paymethod.cartsel">Select</string>
    <string name="paymethod.codsel">Select</string>
    <string name="paymethod.cod">COD</string>

</resources>