<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".confirm_OPT">
    <ImageView
        android:layout_width="331dp"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/black"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/txt_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/back"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Reset Password"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center">

    </TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:backgroundTint="@color/black"
        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
        android:id="@+id/edt_OTP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/duongvien_goctron"
        android:hint="@string/OTP"
        android:inputType="text"
        android:textColor="#757575"
        android:textSize="17sp">
        </EditText>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/duongvien_goctron"
            android:hint="@string/password"
            android:inputType="text"
            android:textColor="#757575"
            android:textSize="17sp">
        </EditText>
        <EditText
            android:id="@+id/edt_ConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/duongvien_goctron"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:textColor="#757575"
            android:textSize="17sp">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="At least 8 charaters, 1 uppercase letter, 1 number, 1 symbol"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            android:text="Log In"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="17sp">

        </Button>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:background="?android:attr/listDivider" />

    </LinearLayout>


</LinearLayout>