<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".address"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contract"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_address.name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron"
        android:hint="@string/contract_name"
        android:inputType="text"
        android:textSize="17sp">
    </EditText>
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/edt_address.phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron"
        android:hint="@string/contract_phone"
        android:inputType="text"
        android:textSize="17sp">
    </EditText>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_address.ward"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron"
        android:hint="@string/contract_address"
        android:inputType="text"
        android:textSize="17sp">
    </EditText>
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/edt_address.street"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron"
        android:hint="@string/contract_street"
        android:inputType="text"
        android:textSize="17sp">
    </EditText>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setting"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/black"
            android:text="Office"
            android:textSize="17sp"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"/>
        <Button
            android:gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/black"
            android:text="Home"
            android:textSize="17sp"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="">

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/duongvien_goctron">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set as default"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#031824"
        android:text="Done"
        android:textSize="17sp"/>

</LinearLayout>